--- a/src/ball_detector/CMakeLists.txt
+++ b/src/ball_detector/CMakeLists.txt
@@ -15,10 +15,10 @@ find_package(rosidl_default_generators REQUIRED)
 find_package(std_msgs REQUIRED)
 
 # add_executable(ball_detector src/ball_detector.cpp)
-target_include_directories(ball_detector PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include/${PROJECT_NAME}>)
-target_compile_features(ball_detector PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
+# target_include_directories(ball_detector PUBLIC
+#   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+#   $<INSTALL_INTERFACE:include/${PROJECT_NAME}>)
+# target_compile_features(ball_detector PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
 ament_target_dependencies(
   ball_detector
   "rclpy"
