--- a/src/ball_detector/CMakeLists.txt
+++ b/src/ball_detector/CMakeLists.txt
@@ -37,6 +37,12 @@ rosidl_generate_interfaces(
 
 ament_export_dependencies(rosidl_default_runtime)
 
+# add this line below to execute py program
+install(PROGRAMS
+  src/ball_detector/ball_detection.py
+  DESTINATION lib/${PROJECT_NAME}
+)
+
 
 # install(TARGETS ball_detector
 #   DESTINATION lib/${PROJECT_NAME})
