--- a/src/ball_detPy/package.xml
+++ b/src/ball_detPy/package.xml
@@ -12,6 +12,18 @@
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
 
+  <!-- Build tool dependencies -->
+  <buildtool_depend>ament_python</buildtool_depend>
+  
+  <!-- Build dependencies -->
+  <depend>rclpy</depend>
+  <depend>std_msgs<depend>
+
+
+  <!-- execution dependencies -->
+  <exec_depend> rclpy </exec_depend>
+  <exec_depend> std_msgs </exec_depend>
+
   <export>
     <build_type>ament_python</build_type>
   </export>
